--- a/SoundCloud/SoundCloud/Home/View/HomeTableViewCell.xib
+++ b/SoundCloud/SoundCloud/Home/View/HomeTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeTableViewCell" rowHeight="227" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="SoundCloud" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomeTableViewCell" rowHeight="227" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="SoundCloud" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="372" height="227"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -35,6 +35,9 @@
                                 <state key="normal" title="See All &gt;">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="clickTitle:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="HTV-s3-rA7"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.69019607839999997" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
